--- a/api/Pipfile
+++ b/api/Pipfile
@@ -10,6 +10,9 @@ python-dotenv = "==0.15.0"
 flask-cors = "==3.0.10"
 
 [dev-packages]
+pylint = "==2.7.2"
+pycodestyle = "==2.6.0"
+black = "*"
 
 [requires]
 python_version = "3.11"
